<resources>
    <string-array name="categories">
        <item>@string/default_category</item>
        <item>Robbery</item>
        <item>Burglary</item>
        <item>Assault</item>
        <item>Drugs</item>
    </string-array>
    <string name="default_category">Select Category</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_name">CrimeMapper</string>
    <string name="title_activity_maps">CrimeMapper</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="first_name">First Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="log_in">Register and Login</string>
    <string name="type_email_you_registered_with">Registered email</string>
    <string name="cancel">Cancel</string>
    <string name="send_mail">Send Email</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="description">Brief statement</string>
    <string name="post">Submit</string>
    <string name="next">Continue</string>
    <string name="register">Register</string>
    <string name="pick_location">Pick Location of Crime</string>
    <string name="pick_date">Pick Date</string>
    <string name="details">Details</string>
    <string name="pick_time">Pick Time</string>
    <string name="occurence_place">Place of Occurence</string>
    <string name="last_name">Last Name</string>
    <string name="nrc">NRC</string>
    <string name="residence">Residence</string>
    <string name="Add">Add</string>
    <string name="suspect">Suspect</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone Number</string>
    <string name="age">Age</string>
    <string name="suspects">Suspects</string>
    <string name="station">Case submitted to %1$s police station</string>
</resources>
