<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="300dip"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:context="com.techart.crimemapper.setup.PasswordResetDialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="42sp"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:text="@string/suspect"/>

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:hint="@string/first_name"
        android:maxLines="1"
        android:inputType="textCapWords"/>


    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:hint="@string/last_name"
        android:maxLines="1"
        android:inputType="textCapWords"/>

    <EditText
        android:id="@+id/nrc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:hint="@string/nrc"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/tv_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:inputType="number"
        android:hint="@string/age"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="phone"
        android:padding="10dp"
        android:hint="@string/phone_number"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/et_residence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:hint="@string/residence"
        android:maxLines="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:layout_margin="7dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/cancel" />


        <TextView
            android:id="@+id/tv_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:layout_margin="7dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/save" />

    </LinearLayout>
</LinearLayout>